--- a/po/br.po
+++ b/po/br.po
@@ -1236,7 +1236,7 @@ msgstr "Efeduster ar grubuilh rekedoù"
 
 #: js/messages.php:97 po/advisory_rules.php:70
 msgid "Query cache usage"
-msgstr ""
+msgstr "Implij ar grubuilh rekedoù"
 
 #: js/messages.php:98
 msgid "Query cache used"
