--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 20:08+0200\n"
+"PO-Revision-Date: 2011-08-18 20:09+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1414,7 +1414,7 @@ msgstr ""
 #: js/messages.php:146
 #, php-format
 msgid "Set log_output to %s"
-msgstr ""
+msgstr "Reizhañ log_output da %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:148
