Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -1434,7 +1434,7 @@ msgstr "Diweredekaat %s"
 #: js/messages.php:152
 #, php-format
 msgid "Set long_query_time to %ds"
-msgstr ""
+msgstr "Reizhañ long_query_time da %ds"
 
 #: js/messages.php:153
 msgid ""
