Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 20:09+0200\n"
+"PO-Revision-Date: 2011-08-18 20:10+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1441,6 +1441,8 @@ msgid ""
 "You can't change these variables. Please log in as root or contact your "
 "database administrator."
 msgstr ""
+"N'hallit ket cheñch an arventennoù-mañ. Kevreit dindan root pe kit e "
+"darempred gant merour ar servijer."
 
 #: js/messages.php:154
 #, fuzzy
