Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -862,7 +862,7 @@ msgstr "Use OpenStreetMaps as Base Layer"
 
 #: gis_data_editor.php:134
 msgid "SRID"
-msgstr ""
+msgstr "SRID"
 
 #: gis_data_editor.php:151 js/messages.php:289
 #: libraries/display_tbl.lib.php:663
