--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -886,10 +886,9 @@ msgstr "Y"
 
 #: gis_data_editor.php:202 gis_data_editor.php:246 gis_data_editor.php:296
 #: js/messages.php:292
-#, fuzzy
 #| msgid "Add routine"
 msgid "Add a point"
-msgstr "Add routine"
+msgstr "Add a point"
 
 #: gis_data_editor.php:218 js/messages.php:287
 #, fuzzy
