Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -891,10 +891,9 @@ msgid "Add a point"
 msgstr "Add a point"
 
 #: gis_data_editor.php:218 js/messages.php:287
-#, fuzzy
 #| msgid "Lines terminated by"
 msgid "Linestring"
-msgstr "Lines terminated by"
+msgstr "Linestring"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
