--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -909,10 +909,9 @@ msgid "Add a linestring"
 msgstr "Add a linestring"
 
 #: gis_data_editor.php:248 gis_data_editor.php:298 js/messages.php:293
-#, fuzzy
 #| msgid "Add a new User"
 msgid "Add an inner ring"
-msgstr "Add a new User"
+msgstr "Add an inner ring"
 
 #: gis_data_editor.php:262 js/messages.php:288
 msgid "Polygon"
