--- a/po/es.po
+++ b/po/es.po
@@ -867,7 +867,7 @@ msgstr "Utilizar OpenStreetMaps como capa base"
 
 #: gis_data_editor.php:134
 msgid "SRID"
-msgstr ""
+msgstr "SRID"
 
 #: gis_data_editor.php:151 js/messages.php:289
 #: libraries/display_tbl.lib.php:663
