--- a/po/es.po
+++ b/po/es.po
@@ -906,7 +906,7 @@ msgstr "Círculo exterior"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
-msgstr ""
+msgstr "Círculo interior"
 
 #: gis_data_editor.php:248
 #, fuzzy
