--- a/po/es.po
+++ b/po/es.po
@@ -902,7 +902,7 @@ msgstr "Cadena de línea"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr "Círculo exterior"
+msgstr "Círculo exterior:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
