--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 00:56+0200\n"
+"PO-Revision-Date: 2011-08-19 00:57+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -898,7 +898,7 @@ msgstr "Agregar un punto"
 #: gis_data_editor.php:218 js/messages.php:287
 #| msgid "Lines terminated by"
 msgid "Linestring"
-msgstr "Cadena de línea"
+msgstr "Cadena de líneas"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
