--- a/po/es.po
+++ b/po/es.po
@@ -914,10 +914,9 @@ msgid "Add a linestring"
 msgstr "Agregar una cadena de líneas"
 
 #: gis_data_editor.php:248 gis_data_editor.php:298 js/messages.php:293
-#, fuzzy
 #| msgid "Add a new User"
 msgid "Add an inner ring"
-msgstr "Agregar un nuevo usuario"
+msgstr "Agregar un círculo interior"
 
 #: gis_data_editor.php:262 js/messages.php:288
 msgid "Polygon"
