--- a/po/es.po
+++ b/po/es.po
@@ -1219,10 +1219,9 @@ msgid "Query statistics"
 msgstr "Estadísticas de Consulta"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Local monitor configuration icompatible"
 msgid "Local monitor configuration incompatible"
-msgstr "Configuración de monitorización local incompatible"
+msgstr "Configuración local de monitorización incompatible"
 
 #: js/messages.php:94
 msgid ""
