Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 01:12+0200\n"
+"PO-Revision-Date: 2011-08-19 01:14+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12285,6 +12285,10 @@ msgid ""
 "overhead of maintaining the cache is likely to increase with its size, so do "
 "this in small increments and monitor the results."
 msgstr ""
+"Podría llegar a querer aumentar «query_cache_size». Recuerde sin embargo que "
+"la sobrecarga de mantener el caché es probable que aumente con su tamaño, "
+"por lo que se recomienda hacerlo en pequeñas cantidades y monitorizar los "
+"resultados."
 
 #: po/advisory_rules.php:93
 msgid ""
