--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 01:19+0200\n"
+"PO-Revision-Date: 2011-08-19 01:20+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12333,6 +12333,8 @@ msgstr "Tamaño mínimo de resultado en caché de consultas"
 msgid ""
 "The max size of the result set in the query cache is the default of 1 MiB."
 msgstr ""
+"El tamaño máximo del conjunto de resultados en el caché de consultas es el "
+"valor predeterminado de 1 MiB."
 
 #: po/advisory_rules.php:102
 msgid ""
