Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-14 22:35+0200\n"
-"Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
+"PO-Revision-Date: 2011-08-19 07:11+0200\n"
+"Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
@@ -628,7 +628,7 @@ msgstr ""
 #: libraries/server_links.inc.php:90 server_replication.php:31
 #: server_replication.php:162 server_status.php:543
 msgid "Replication"
-msgstr ""
+msgstr "படியெடுத்தல்"
 
 #: db_structure.php:443
 msgid "Sum"
