--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:12+0200\n"
+"PO-Revision-Date: 2011-08-19 07:13+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -681,7 +681,7 @@ msgstr ""
 #: db_structure.php:504 libraries/common.lib.php:3120
 #: libraries/common.lib.php:3121
 msgid "Empty"
-msgstr ""
+msgstr "வெறுமை"
 
 #: db_structure.php:506 db_tracking.php:104 libraries/Index.class.php:482
 #: libraries/common.lib.php:3118 libraries/common.lib.php:3119
