Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -757,7 +757,7 @@ msgstr "புதுப்பிக்கப்பட்டது"
 #: libraries/rte/rte_list.lib.php:67 libraries/server_links.inc.php:51
 #: server_status.php:1121 sql.php:880 tbl_tracking.php:638
 msgid "Status"
-msgstr ""
+msgstr "தகுநிலை"
 
 #: db_tracking.php:90 libraries/Index.class.php:430
 #: libraries/db_structure.lib.php:39 libraries/rte/rte_list.lib.php:52
