--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:19+0200\n"
+"PO-Revision-Date: 2011-08-19 07:20+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -696,7 +696,7 @@ msgstr "அட்டவணையை சரிபார்"
 
 #: db_structure.php:510 tbl_operations.php:657 tbl_structure.php:810
 msgid "Optimize table"
-msgstr ""
+msgstr "அட்டவணையை உகப்பாக்கு"
 
 #: db_structure.php:512 tbl_operations.php:644
 msgid "Repair table"
