--- a/po/ta.po
+++ b/po/ta.po
@@ -777,7 +777,7 @@ msgstr "செயற்படு"
 
 #: db_tracking.php:121 tbl_tracking.php:592 tbl_tracking.php:650
 msgid "not active"
-msgstr ""
+msgstr "செயற்பாடற்ற"
 
 #: db_tracking.php:134
 msgid "Versions"
