--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:25+0200\n"
+"PO-Revision-Date: 2011-08-19 07:27+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -645,7 +645,7 @@ msgstr ""
 #: server_databases.php:264 server_privileges.php:1751 tbl_structure.php:554
 #: tbl_structure.php:563
 msgid "With selected:"
-msgstr ""
+msgstr "உடன் தெரிவுசெய்யப்பட்டது"
 
 #: db_structure.php:481 libraries/display_tbl.lib.php:2372
 #: server_databases.php:261 server_privileges.php:671
