Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -818,7 +818,7 @@ msgstr ""
 
 #: enum_editor.php:67 gis_data_editor.php:311
 msgid "Output"
-msgstr "வெளியிடு"
+msgstr "வெளியீடு"
 
 #: enum_editor.php:68
 msgid "Copy and paste the joined values into the \"Length/Values\" field"
