--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:29+0200\n"
+"PO-Revision-Date: 2011-08-19 07:31+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -884,10 +884,9 @@ msgstr ""
 
 #: gis_data_editor.php:202 gis_data_editor.php:246 gis_data_editor.php:296
 #: js/messages.php:292
-#, fuzzy
 #| msgid "Add %s field(s)"
 msgid "Add a point"
-msgstr "%s களத்தை சேர்க்க"
+msgstr "ஒரு புள்ளியை சேர்"
 
 #: gis_data_editor.php:218 js/messages.php:287
 msgid "Linestring"
