Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -912,7 +912,7 @@ msgstr ""
 
 #: gis_data_editor.php:262 js/messages.php:288
 msgid "Polygon"
-msgstr ""
+msgstr "பல்கோணி"
 
 #: gis_data_editor.php:300 js/messages.php:294
 #, fuzzy
