--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:38+0200\n"
+"PO-Revision-Date: 2011-08-19 07:39+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1143,7 +1143,7 @@ msgstr "மொத்தம்"
 #. l10n: Other, small valued, queries
 #: js/messages.php:73 server_status.php:919
 msgid "Other"
-msgstr ""
+msgstr "ஏனையது"
 
 #. l10n: Thousands separator
 #: js/messages.php:75 libraries/common.lib.php:1359
