Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:42+0200\n"
+"PO-Revision-Date: 2011-08-19 07:43+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1245,7 +1245,7 @@ msgstr ""
 
 #: js/messages.php:107
 msgid "Total memory"
-msgstr ""
+msgstr "மொத்த நினைவகம்"
 
 #: js/messages.php:108
 msgid "Cached memory"
