Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:48+0200\n"
+"PO-Revision-Date: 2011-08-19 07:49+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1289,7 +1289,7 @@ msgstr ""
 
 #: js/messages.php:120 server_status.php:1040
 msgid "Connections"
-msgstr ""
+msgstr "இணைப்புகள்"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:124
