Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -1294,7 +1294,7 @@ msgstr "இணைப்புகள்"
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:124
 msgid "Questions"
-msgstr ""
+msgstr "வினாக்கள்"
 
 #: js/messages.php:125 server_status.php:995
 msgid "Traffic"
