--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:49+0200\n"
+"PO-Revision-Date: 2011-08-19 07:53+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1298,7 +1298,7 @@ msgstr "வினாக்கள்"
 
 #: js/messages.php:125 server_status.php:995
 msgid "Traffic"
-msgstr ""
+msgstr "போக்குவரத்து"
 
 #: js/messages.php:126 libraries/server_links.inc.php:73
 #: server_status.php:1442
