--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:55+0200\n"
+"PO-Revision-Date: 2011-08-19 07:57+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1307,7 +1307,7 @@ msgstr "அமைப்புகள்"
 
 #: js/messages.php:127
 msgid "Remove chart"
-msgstr ""
+msgstr "வரைபடத்தை நீக்கு"
 
 #: js/messages.php:128
 msgid "Edit title and labels"
