--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:57+0200\n"
+"PO-Revision-Date: 2011-08-19 07:58+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1390,7 +1390,7 @@ msgstr ""
 #: js/messages.php:148
 #, php-format
 msgid "Enable %s"
-msgstr ""
+msgstr "இயலச்செய் %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:150
