--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:58+0200\n"
+"PO-Revision-Date: 2011-08-19 07:59+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1396,7 +1396,7 @@ msgstr "இயலச்செய் %s"
 #: js/messages.php:150
 #, php-format
 msgid "Disable %s"
-msgstr ""
+msgstr "முடக்கு %s"
 
 #. l10n: %d seconds
 #: js/messages.php:152
