--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 07:59+0200\n"
+"PO-Revision-Date: 2011-08-19 08:00+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1420,7 +1420,7 @@ msgstr ""
 
 #: js/messages.php:157 server_status.php:1530
 msgid "Chart Title"
-msgstr ""
+msgstr "வரைபடத் தலைப்பு"
 
 #. l10n: As in differential values
 #: js/messages.php:159
