--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:06+0200\n"
+"PO-Revision-Date: 2011-08-19 08:07+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1513,7 +1513,7 @@ msgstr ""
 
 #: js/messages.php:184
 msgid "Reload page"
-msgstr ""
+msgstr "பக்கத்தை திரும்ப ஏற்று"
 
 #: js/messages.php:186
 msgid "Affected rows:"
