--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:09+0200\n"
+"PO-Revision-Date: 2011-08-19 08:11+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1550,7 +1550,7 @@ msgstr ""
 
 #: js/messages.php:198
 msgid "Issue"
-msgstr ""
+msgstr "பிரச்சினை"
 
 #: js/messages.php:199
 msgid "Recommendation"
