Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:11+0200\n"
+"PO-Revision-Date: 2011-08-19 08:12+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1554,7 +1554,7 @@ msgstr "பிரச்சினை"
 
 #: js/messages.php:199
 msgid "Recommendation"
-msgstr ""
+msgstr "பரிந்துரை"
 
 #: js/messages.php:200
 msgid "Rule details"
