--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:25+0200\n"
+"PO-Revision-Date: 2011-08-19 08:27+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1652,7 +1652,7 @@ msgstr "தேடுதல்"
 
 #: js/messages.php:235
 msgid "Hide search results"
-msgstr ""
+msgstr "தேடல் முடிவுகளை மறை"
 
 #: js/messages.php:236
 msgid "Show search results"
