--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:29+0200\n"
+"PO-Revision-Date: 2011-08-19 08:30+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1764,7 +1764,7 @@ msgstr "புறக்கணி"
 
 #: js/messages.php:283 libraries/display_tbl.lib.php:1327
 msgid "Copy"
-msgstr ""
+msgstr "நகல்"
 
 #: js/messages.php:291
 msgid "Outer Ring"
