Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:31+0200\n"
+"PO-Revision-Date: 2011-08-19 08:32+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1844,7 +1844,7 @@ msgstr "இணைப்புக்கு செல்"
 
 #: js/messages.php:322
 msgid "Generate password"
-msgstr ""
+msgstr "கடவுச்சொல்லை இயற்று"
 
 #: js/messages.php:323 libraries/replication_gui.lib.php:369
 msgid "Generate"
